--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             </a>
             <div class="introduction-container col-lg-6 col-sm-12">
                 <h4 class="title">¿Quien soy?</h4>
-                <h5 class="mt-3">Soy Miguel Eusebio estudiante de Programación / Administración de TI.</h5>
-                <p class="mt-3">Actualmente estoy estudiando Administracion de Tecnologías de la Información en la
+                <h5 class="mt-3">Soy Miguel Eusebio estudiante de Programación.</h5>
+                <p class="mt-3">He concluido la licenciatura en Administracion de Tecnologías de la Información en la
                     Universidad Insurgentes. Soy un apasionado por temas tecnologicos, videojuegos y fútbol, también me
                     gusta la programación por lo que estoy aprendiendo de forma autodidacta a programar. He desarrollado
-                    varios proyectos de frontend, backend y python, sin embargo le he dedicado más tiempo a proyectos de python y backend porque lo encuentro muy interesante y apasionante.</p>
+                    varios proyectos de frontend, backend y python, sin embargo le he dedicado más tiempo a proyectos de python y backend porque lo encuentro muy interesante y apasionante. Hablando del mundo laboral he tenido lo oportunidad de adquirir experiencia laboral en pequeños negocios desde que tengo 15 años, para posteriormente trabajar en algo más formal como lo fue ser auxiliar de oficina en despachos jurídicos.</p>
                 <a href="./css/pdf/curriculum_miguel.pdf">
                     <button class="btn btn-success title">
                         <img src="./css/img/cv.png" alt="CV image" class="img-cv">
@@ -234,70 +234,69 @@
                         <div class="slick-track" id="track">
                             <div class="slick">
                                 <div>
-                                    <a href="https://miguel-once.github.io/dice_game/">
+                                    <a href="https://miguel-eusebio.github.io/diceGame/">
                                         <h4><small>Dice Game</small>Pulsa para ver</h4>
                                         <picture>
-                                            <img src="./css/img/diceGame.png" alt="Image">
+                                            <img src="./css/img/proyectos/dice_game.png" alt="Image">
                                         </picture>
                                     </a>
                                 </div>
                             </div>
                             <div class="slick">
                                 <div>
-                                    <a href="/">
-                                        <h4><small>Share Your Message</small>Pulsa para ver</h4>
+                                    <a href="https://miguel-eusebio.github.io/drumKit/">
+                                        <h4><small>Drum Kit</small>Pulsa para ver</h4>
                                         <picture>
-                                            <img src="./css/img/diceGame.png" alt="Image">
+                                            <img src="./css/img/proyectos/drumkit.png" alt="Image">
                                         </picture>
                                     </a>
                                 </div>
                             </div>
                             <div class="slick">
                                 <div>
-                                    <a href="/">
-                                        <h4><small>Share Your Message</small>Pulsa para ver</h4>
+                                    <a href="https://miguel-eusebio.github.io/simonGame/">
+                                        <h4><small>Simon Game</small>Pulsa para ver</h4>
                                         <picture>
-                                            <img src="./css/img/diceGame.png" alt="Image">
+                                            <img src="./css/img/proyectos/simon_game.png" alt="Image">
                                         </picture>
                                     </a>
                                 </div>
                             </div>
                             <div class="slick">
                                 <div>
-                                    <a href="/">
-                                        <h4><small>Share Your Message</small>Pulsa para ver</h4>
+                                    <a href="https://replit.com/@MiguelEusebio/Piedra-papel-o-tijeras#main.py">
+                                        <h4><small>Piedra, papel o tijera</small>Pulsa para ver</h4>
                                         <picture>
-                                            <img src="./css/img/diceGame.png" alt="Image">
+                                            <img src="./css/img/proyectos/piedra_papel_tijera.png" alt="Image">
                                         </picture>
                                     </a>
                                 </div>
                             </div>
                             <div class="slick">
                                 <div>
-                                    <a href="/">
-                                        <h4><small>Share Your Message</small>Pulsa para ver</h4>
+                                    <a href="https://replit.com/@MiguelEusebio/password-generator#main.py">
+                                        <h4><small>Password Generator</small>Pulsa para ver</h4>
                                         <picture>
-                                            <img src="./css/img/diceGame.png" alt="Image">
+                                            <img src="./css/img/proyectos/password_generator.JPG" alt="Image">
                                         </picture>
                                     </a>
                                 </div>
                             </div>
                             <div class="slick">
                                 <div>
-                                    <a href="/">
-                                        <h4><small>Share Your Message</small>Pulsa para ver</h4>
+                                    <a href="https://replit.com/@MiguelEusebio/caesar-cipher-4-start#main.py">
+                                        <h4><small>Caesar Cipher</small>Pulsa para ver</h4>
                                         <picture>
-                                            <img src="./css/img/diceGame.png" alt="Image">
+                                            <img src="./css/img/proyectos/caesar_cipher.png" alt="Image">
                                         </picture>
                                     </a>
                                 </div>
                             </div>
                             <div class="slick">
                                 <div>
-                                    <a href="/">
-                                        <h4><small>Share Your Message</small>Pulsa para ver</h4>
+                                    <a href="#">
                                         <picture>
-                                            <img src="./css/img/diceGame.png" alt="Image">
+                                            <img src="./css/img/proyectos/coming_soon.jpg" alt="Image">
                                         </picture>
                                     </a>
                                 </div>
@@ -334,7 +333,7 @@
                         <div class="enlaces-medios">
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="mailto:miguel.eusebio117@gmail.com">
                                         <img src="./css/img/gmail.png" alt="gmail">
                                     </a>
                                     <p>Correo</p>
