17--10- 2 -aAtualización de CV

--- a/index.html
+++ b/index.html
@@ -73,11 +73,8 @@
             </a>
             <div class="introduction-container col-lg-6 col-sm-12">
                 <h4 class="title">¿Quien soy?</h4>
-                <h5 class="mt-3">Soy Miguel Eusebio estudiante de Programación.</h5>
-                <p class="mt-3">He concluido la licenciatura en Administracion de Tecnologías de la Información en la
-                    Universidad Insurgentes. Soy un apasionado por temas tecnologicos, videojuegos y fútbol, también me
-                    gusta la programación por lo que estoy aprendiendo de forma autodidacta a programar. He desarrollado
-                    varios proyectos de frontend, backend y python, sin embargo le he dedicado más tiempo a proyectos de python y backend porque lo encuentro muy interesante y apasionante. Hablando del mundo laboral he tenido lo oportunidad de adquirir experiencia laboral en pequeños negocios desde que tengo 15 años, para posteriormente trabajar en algo más formal como lo fue ser auxiliar de oficina en despachos jurídicos.</p>
+                <h5 class="mt-3">Soy Miguel Vazquez Eusebio programador autodidacta.</h5>
+                <p class="mt-3">Tengo 23 años y he concluido la licenciatura en Administración de Tecnologías de la Información en la Universidad Insurgentes. Soy un apasionado por temas tecnológicos, videojuegos y fútbol, también me gusta la programación por lo que estoy aprendiendo de forma autodidacta a programar. He desarrollado varios proyectos de frontend, backend y python; sin embargo, le he dedicado más tiempo a proyectos de python y backend porque los encuentro muy interesantes y apasionantes. Hablando del mundo laboral he tenido lo oportunidad de adquirir experiencia laboral en pequeños negocios desde que tengo 15 años, para posteriormente trabajar en algo más formal como lo fue ser auxiliar de oficina en despachos jurídicos.</p>
                 <a href="./css/pdf/curriculum_miguel.pdf">
                     <button class="btn btn-success title">
                         <img src="./css/img/cv.png" alt="CV image" class="img-cv">
@@ -106,19 +103,35 @@
                 </div>
                 <div>
                     <img src="./css/img/node.png" alt="skill image" class="img-skill">
-                    <p>NodeJS</p>
-                </div>
-                <div>
-                    <img src="./css/img/github.png" alt="skill image" class="img-skill">
-                    <p>GitHub</p>
+                    <p>Node</p>
                 </div>
                 <div>
                     <img src="./css/img/git.png" alt="skill image" class="img-skill">
                     <p>Git</p>
                 </div>
                 <div>
+                    <img src="./css/img/github.png" alt="skill image" class="img-skill">
+                    <p>GitHub</p>
+                </div>
+                <div>
                     <img src="./css/img/mongo.png" alt="skill image" class="img-skill">
                     <p>Mongo</p>
+                </div>
+                <div>
+                    <img src="./css/img/mysql.png" alt="skill image" class="img-skill">
+                    <p>MySQL</p>
+                </div>
+                <div>
+                    <img src="./css/img/bootstrap.png" alt="skill image" class="img-skill">
+                    <p>Boostrap</p>
+                </div>
+                <div>
+                    <img src="./css/img/typescript.png" alt="skill image" class="img-skill">
+                    <p>TypeScript</p>
+                </div>
+                <div>
+                    <img src="./css/img/JQuery.png" alt="skill image" class="img-skill">
+                    <p>JQuery</p>
                 </div>
             </div>
 
@@ -195,6 +208,15 @@
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Pulsa para ver</h5>
                                     <p>Nivel B1 de inglés en Busuu.</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="carousel-item solid-yellow">
+                            <a href="./css/pdf/certificado_solid.pdf" class="d-block">
+                                <img src="./css/img/clean-code.png" class="d-block" alt="...">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Pulsa para ver</h5>
+                                    <p>Principios SOLID y Clean Code.</p>
                                 </div>
                             </a>
                         </div>
