27/03/2023 - Added caesarCipher projects

--- a/index.html
+++ b/index.html
@@ -259,6 +259,50 @@
                             <div class="card">
                                 <div class="content">
                                   <div class="img js-background">
+                                    <img src="./css/img/proyectos/caesar-cipher.png" alt="Cifrado del Cesar">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Cifrado César</div>
+                                    <div class="language js-font">JavaScript</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="js-background" title="GitHub" href="https://github.com/miguel-eusebio/caesarCipher"><i class="fab fa-github"></i></a>
+                                    <a class="js-background" title="Jugar Online" href="https://miguel-eusebio.github.io/caesarCipher/"><i class="fab fa-google-play"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img python-background">
+                                    <img src="./css/img/proyectos/weather.png" alt="Weather Message">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Weather Message</div>
+                                    <div class="language python-font">Python</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="python-background" title="GitHub" href="https://github.com/miguel-eusebio/weatherMessage/blob/main/main.py"><i class="fab fa-github"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img python-background">
+                                    <img src="./css/img/proyectos/caesar-cipher.png" alt="Cifrado del Cesar">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Cifrado César</div>
+                                    <div class="language python-font">Python</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="python-background" title="GitHub" href="https://github.com/miguel-eusebio/pyCaesarCipher"><i class="fab fa-github"></i></a>
+                                    <a class="python-background" title="Descargar" href="https://drive.google.com/uc?id=1Cet3lBTmhXDSOK3I9RQMVu-q0_fPXz2z&export=download&authuser=0"><i class="fab fa-google-drive"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img js-background">
                                     <img src="./css/img/proyectos/dice.png" alt="Dados">
                                   </div>
                                   <div class="details">
@@ -332,6 +376,55 @@
                                   </div>
                                 </div>
                             </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img python-background">
+                                    <img src="./css/img/proyectos/snake-game.png" alt="Snake Game">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Snake Game</div>
+                                    <div class="language python-font">Python</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
+                                    <a class="python-background" title="Jugar Online" href="¨#"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Descargar" href="#"><i class="fab fa-google-drive"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img python-background">
+                                    <img src="./css/img/proyectos/turtle.png" alt="Turtle Crossing Game">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Turtle Game</div>
+                                    <div class="language python-font">Python</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
+                                    <a class="python-background" title="Jugar Online" href="¨#"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Descargar" href="#"><i class="fab fa-google-drive"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="content">
+                                  <div class="img python-background">
+                                    <img src="./css/img/proyectos/ping-pong.png" alt="Ping Pong Game">
+                                  </div>
+                                  <div class="details">
+                                    <div class="name">Ping Pong Game</div>
+                                    <div class="language python-font">Python</div>
+                                  </div>
+                                  <div class="media-icons">
+                                    <a class="python-background" title="GitHub" href="#"><i class="fab fa-github"></i></a>
+                                    <a class="python-background" title="Jugar Online" href="¨#"><i class="fab fa-google-play"></i></a>
+                                    <a class="python-background" title="Descargar" href="#"><i class="fab fa-google-drive"></i></a>
+                                  </div>
+                                </div>
+                            </div>
+
 
                             <!-- <div class="slick">
                                 <div>
